added a paragraph and heading

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HTML Tutorial</title>
+<title>chuncyjackson</title>
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>Do Now</h1>
+<p>Phishing is the fraudulent practice of sending emails purporting to be from reputable companies to induce individuals to reveal personal information, such as passwords and credit card numbers. Flaming is the act of sending or posting offensive messages over the Internet. Spamming is the use of electronic messaging systems like e-mails and other digital delivery systems and broadcast media to send unwanted bulk messages indiscriminately. They are similar because they all can invade your privacy. They are different because they invade the person’s privacy in a different way, phishing you reveal someone’s private information, flaming you get sent offensive messages, spamming you get unlimited amount of e-mails or messages you can’t block. </p>
 
 </body>
 </html>
