--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
+<div class="main"
 <head>
 <title>chuncyjackson</title>
 </head>
-<body>
-
-<h1>Do Now</h1>
-<p>Phishing is the fraudulent practice of sending emails purporting to be from reputable companies to induce individuals to reveal personal information, such as passwords and credit card numbers. Flaming is the act of sending or posting offensive messages over the Internet. Spamming is the use of electronic messaging systems like e-mails and other digital delivery systems and broadcast media to send unwanted bulk messages indiscriminately. They are similar because they all can invade your privacy. They are different because they invade the person’s privacy in a different way, phishing you reveal someone’s private information, flaming you get sent offensive messages, spamming you get unlimited amount of e-mails or messages you can’t block. </p>
-
+<div class="container">
+ <body>
+<div class="navbar">
+<h4>My Favorite Colors</h4>
+<h1>Chuncy Jackson</h1>
+<img src="https://pixabay.com/en/red-color-paint-bright-red-192827/">
+ <ul>
+   <li>Blue</li>
+   <li>Red</li>
+   <li>Orange</li>
+ </ul>
+</div>
+ <p>Blue is a pretty good color. Red is a pretty good color. Orange is a pretty good color</p>
+<img src="https://www.publicdomainpictures.net/en/view-image.php?image=199966&picture=plain-blue-background">
 </body>
+</div>
 </html>
+</div>
