--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html>
-<div class="main"
-<head>
-<title>chuncyjackson</title>
-</head>
-<div class="container">
- <body>
-<div class="navbar">
-<h4>My Favorite Colors</h4>
-<h1>Chuncy Jackson</h1>
-<img src="https://pixabay.com/en/red-color-paint-bright-red-192827/">
- <ul>
-   <li>Blue</li>
-   <li>Red</li>
-   <li>Orange</li>
- </ul>
-</div>
- <p>Blue is a pretty good color. Red is a pretty good color. Orange is a pretty good color</p>
-<img src="https://www.publicdomainpictures.net/en/view-image.php?image=199966&picture=plain-blue-background">
+  <head>
+    <title>chuncyjackson</title>
+    <link href="style.css" rel="stylesheet"/> type="text/css"/>
+  </head>
+
+
+    <body>
+      <div class="container">
+
+        <div class="navbar"
+          <h4>My Favorite Colors</h4>
+           <ul>
+             <li>Blue</li>
+             <li>Red</li>
+             <li>Orange</li>
+           </ul>
+        </div>
+        <div class="login">Login Here
+        </div>
+      <div class="main"
+         <h1>Chuncy Jackson</h1>
+         <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjblbrz8ZTdAhWimeAKHUkIB50QjRx6BAgBEAU&url=https%3A%2F%2Fwww.publicdomainpictures.net%2Fen%2Fview-image.php%3Fimage%3D27336%26picture%3Dsolid-red-background&psig=AOvVaw35I8K1YiEU2NWC-mittQA3&ust=1535722368966058">
+         <p><a href="https://www.google.com/imgres?imgurl=http%3A%2F%2Fjonvilma.com%2Fimages%2Fblue-2.jpg&imgrefurl=https%3A%2F%2Fmspfa.com%2F%3Fs%3D23634%26p%3D1&docid=FyaydO5-_Yq3pM&tbnid=yr2_BV7W-AbSaM%3A&vet=10ahUKEwihwaz96ZTdAhUnnOAKHZk9AuYQMwjJASgJMAk..i&w=1680&h=1050&safe=active&bih=918&biw=1280&q=blue&ved=0ahUKEwihwaz96ZTdAhUnnOAKHZk9AuYQMwjJASgJMAk&iact=mrc&uact=8">Blue</a> is a pretty good color. Red is a pretty good color. Orange is a pretty good color</p>
+
+      </div>
+      </div>
 </body>
-</div>
 </html>
-</div>
