--- a/orange.html
+++ b/orange.html
@@ -12,9 +12,9 @@
         <div class="navbar"
           <h4>My Favorite Colors</h4>
            <ul>
-             <a href="./index.html">Blue</a>
+             <li>Blue</li>
              <li>Red</li>
-             <li>Orange</li>
+             <a href="./orange.html">Orange</a>
            </ul>
         </div>
         <div class="login"><a>Login Here</a>
