--- a/red.html
+++ b/red.html
@@ -12,8 +12,8 @@
         <div class="navbar"
           <h4>My Favorite Colors</h4>
            <ul>
-             <a href="./index.html">Blue</a>
-             <li>Red</li>
+             <li>Blue</li>
+             <a href="./red.html">Red</a>
              <li>Orange</li>
            </ul>
         </div>
