--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>chuncyjackson</title>
+    <title>ChunyJackson</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
+    <style>
+  body {
+    background-image: url("./Football.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+    </style>
   </head>
 
 
     <body>
       <div class="container">
 
-        <div class="navbar"
+
+        <div class="navbar">
           <h4>My Favorite Colors</h4>
            <ul>
              <a href="./index.html">Blue</a>
@@ -19,13 +27,21 @@
         </div>
         <div class="login"><a>Login Here</a>
         </div>
-      <div class="main"
+      <div class="main">
          <h1>Chuncy Jackson</h1>
          <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAQMAAADCCAMAAAB6zFdcAAAAA1BMVEVCtOYdpEiFAAAASElEQVR4nO3BMQEAAADCoPVPbQwfoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIC3AcUIAAFkqh/QAAAAAElFTkSuQmCC"/>
          <p><a href="https://www.google.com/imgres?imgurl=http%3A%2F%2Fjonvilma.com%2Fimages%2Fblue-2.jpg&imgrefurl=https%3A%2F%2Fmspfa.com%2F%3Fs%3D23634%26p%3D1&docid=FyaydO5-_Yq3pM&tbnid=yr2_BV7W-AbSaM%3A&vet=10ahUKEwihwaz96ZTdAhUnnOAKHZk9AuYQMwjJASgJMAk..i&w=1680&h=1050&safe=active&bih=918&biw=1280&q=blue&ved=0ahUKEwihwaz96ZTdAhUnnOAKHZk9AuYQMwjJASgJMAk&iact=mrc&uact=8">Blue</a> is a pretty good color. Red is a pretty good color. Orange is a pretty good color</p>
 
 
       </div>
+      <footer>
+      <ul>
+        <li>Blue</li>
+        <li>Red</li>
+        <li>Orange</li>
+      </ul>
+      </footer>
+
 
     </div>
 </body>
