--- a/red.html
+++ b/red.html
@@ -8,6 +8,11 @@
 
     <body>
       <div class="container">
+        <footer>
+          <ul>Blue</ul>
+          <ul>Red</ul>
+          <ul>Orange</ul>
+        </footer>
 
         <div class="navbar"
           <h4>My Favorite Colors</h4>
