--- a/orange.html
+++ b/orange.html
@@ -3,34 +3,39 @@
   <head>
     <title>chuncyjackson</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
+    <stlye>
+
+    </style>
+
   </head>
 
 
     <body>
       <div class="container">
-        <footer>
-          <ul>Blue</ul>
-          <ul>Red</ul>
-          <ul>Orange</ul>
-        </footer>
 
-        <div class="navbar"
-          <h4>My Favorite Colors</h4>
+
+        <div class="navbar">
+          <h4><a href="./index.html">My Favorite Colors</a></h4>
            <ul>
-             <li>Blue</li>
-             <li>Red</li>
+             <a href="./index.html">Blue</a>
+             <a href="./red.html">Red</a>
              <a href="./orange.html">Orange</a>
            </ul>
         </div>
         <div class="login"><a>Login Here</a>
         </div>
-      <div class="main"
+      <div class="main">
          <h1>Chuncy Jackson</h1>
-         <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAQMAAADCCAMAAAB6zFdcAAAAA1BMVEVCtOYdpEiFAAAASElEQVR4nO3BMQEAAADCoPVPbQwfoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIC3AcUIAAFkqh/QAAAAAElFTkSuQmCC"/>
-         <p><a href="https://www.google.com/imgres?imgurl=http%3A%2F%2Fjonvilma.com%2Fimages%2Fblue-2.jpg&imgrefurl=https%3A%2F%2Fmspfa.com%2F%3Fs%3D23634%26p%3D1&docid=FyaydO5-_Yq3pM&tbnid=yr2_BV7W-AbSaM%3A&vet=10ahUKEwihwaz96ZTdAhUnnOAKHZk9AuYQMwjJASgJMAk..i&w=1680&h=1050&safe=active&bih=918&biw=1280&q=blue&ved=0ahUKEwihwaz96ZTdAhUnnOAKHZk9AuYQMwjJASgJMAk&iact=mrc&uact=8">Blue</a> is a pretty good color. Red is a pretty good color. Orange is a pretty good color</p>
+         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNrAodXYk_jMUwGaJrGAnmXNI8W_6B_RR290yS8LzQuGOk4UewLA"/>
+         <p>Blue is a pretty good color. Red is a pretty good color.<a href="https://www.publicdomainpictures.net/pictures/130000/nahled/yellow-orange-background.jpg">Orange</a> is a pretty good color</p>
 
 
       </div>
+      <footer>
+        <li>Blue</li>
+        <li>Red</li>
+        <li>Orange</li>
+      </footer>
 
     </div>
 </body>
