--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 
 
         <div class="navbar">
-          <h4>My Favorite Colors</h4>
+          <h4><a href="./index.html">My Favorite Colors</a></h4>
            <ul>
              <a href="./index.html">Blue</a>
-             <li>Red</li>
-             <li>Orange</li>
+             <a href="./red.html">Red</a>
+             <a href="./orange.html">Orange</a>
            </ul>
         </div>
         <div class="login"><a>Login Here</a>
         </div>
       <div class="main">
          <h1>Chuncy Jackson</h1>
-         <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAQMAAADCCAMAAAB6zFdcAAAAA1BMVEVCtOYdpEiFAAAASElEQVR4nO3BMQEAAADCoPVPbQwfoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIC3AcUIAAFkqh/QAAAAAElFTkSuQmCC"/>
-         <p><a href="https://www.google.com/imgres?imgurl=http%3A%2F%2Fjonvilma.com%2Fimages%2Fblue-2.jpg&imgrefurl=https%3A%2F%2Fmspfa.com%2F%3Fs%3D23634%26p%3D1&docid=FyaydO5-_Yq3pM&tbnid=yr2_BV7W-AbSaM%3A&vet=10ahUKEwihwaz96ZTdAhUnnOAKHZk9AuYQMwjJASgJMAk..i&w=1680&h=1050&safe=active&bih=918&biw=1280&q=blue&ved=0ahUKEwihwaz96ZTdAhUnnOAKHZk9AuYQMwjJASgJMAk&iact=mrc&uact=8">Blue</a> is a pretty good color. Red is a pretty good color. Orange is a pretty good color</p>
+         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0WYmiozkjXrvVqK-C0lUWkZF-XVTKenXylt_O5bPMZUKjpx1Hiw"/>
+         <p><a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2Ff%2Ff5%2FF1_light_blue_flag.svg%2F2000px-F1_light_blue_flag.svg.png&imgrefurl=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AF1_light_blue_flag.svg&docid=kYFFl6GeM7NHOM&tbnid=8UJCoVaQ8gYWdM%3A&vet=10ahUKEwi9hImF0sndAhUR31MKHYfECh4QMwiZASgHMAc..i&w=2000&h=1500&safe=strict&bih=913&biw=1280&q=blue&ved=0ahUKEwi9hImF0sndAhUR31MKHYfECh4QMwiZASgHMAc&iact=mrc&uact=8">Blue</a> is a pretty good color. Red is a pretty good color. Orange is a pretty good color</p>
 
 
       </div>
